--- a/site.yml
+++ b/site.yml
@@ -4,11 +4,30 @@
 - hosts: all
 
   pre_tasks:
+    - name: removing localhost venv
+      file:
+        path: venv
+        state: absent
+      connection: local
+
+    - name: installing localhost venv
+      command: virtualenv -p python3 venv
+      connection: local
+
+    - name: updating localhost venv pip
+      pip:
+        name: pip
+        state: latest
+        virtualenv: '{{ playbook_dir }}/venv'
+        extra_args: -vvv
+      connection: local
+
     - name: updating apt-get cache
       apt:
         update_cache: yes
       become: yes
 
   roles:
+    - nvidia
     - python
     - hermes
