now updating fan speed in a single batched command, also enabling fan control only once at init time, hermes is not a systemd service

--- a/roles/hermes/tasks/main.yml
+++ b/roles/hermes/tasks/main.yml
@@ -20,3 +20,18 @@
     state: latest
     virtualenv: ~/venv
     extra_args: -vvv -f /tmp/dist --no-cache
+
+- name: copying hermes service file
+  copy:
+    src: hermes.service
+    dest: /etc/systemd/system/
+    mode: 755
+  become: yes
+
+- name: enabling hermes in systemd
+  systemd:
+    name: hermes.service
+    enabled: yes
+    state: restarted
+    daemon_reload: yes
+  become: yes
